data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_703.wast
;; 4. **Test for Incorrect Type Assumptions in `br` after `nop`**:    - **Description**: Write a function that uses `nop` before a `br` (branch) instruction and checks for operand types consistency required by the branch.    - **Constraint Checked**: Verifies the consistency of stack types during branching control flow.    - **Relation**: Ensures that the stack remains in a valid state even after inserting `nop` before a branch, checking for type mismatches caused by node initialization issues.

(assert_invalid
  (module
    (func $type-mismatch-i32-br
      (block $block
        nop
        br $block
      )
    )
  )
  "type mismatch"
)